--- a/src/style.css
+++ b/src/style.css
@@ -3,6 +3,8 @@
   'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue';
   background-color: rgb(25,25,25);
   color: #dbdbdb;
+  font-size: 1.2rem;
+  font-weight: 200;
 /*  line-height: 1.5;
   font-weight: 400;
   color-scheme: light dark;
@@ -47,6 +49,14 @@ html::-webkit-scrollbar, body::-webkit-scrollbar {
   margin: 0;
   z-index: 1;
 }
+ #cesium-div {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  padding: 0;
+  margin: 0;
+  z-index: 1;
+ }
 
 #scroll-div {
   position: absolute;
@@ -175,13 +185,6 @@ html::-webkit-scrollbar, body::-webkit-scrollbar {
   stroke: #7dac46;
 }
 
-#hideInfoBtn-img {
-  stroke: white;
-  fill: white;
-  height: 30px;
-  width: 30px;
-}
-
 .esri-attribution {
   opacity: 0.2;
 }
@@ -200,7 +203,7 @@ html::-webkit-scrollbar, body::-webkit-scrollbar {
   }
 
   #codinggrid-img {
-    height: 300px;
+    height: 450px;
   }
 
   #scrollIndicator-img {
