show and hide ui icon

--- a/src/style.css
+++ b/src/style.css
@@ -16,6 +16,10 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.hidden {
+  display: none;
+}
+
 a {
   font-weight: 500;
   color: rgba(35,108,118,1);
